--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aceternity-ui": "^0.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.0-alpha.0",
     "heroicons": "^2.1.5",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
